Save/Update files [ci skip]

--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -295,8 +295,8 @@
  INSTI_NOT_ENOUGH_HOLD:0 "$NAME|Y$の制度は、受容するのに十分なほど我が国に広まっていません。受容するには、自治率による補正後の開発度の$NEED|Y$%以上が必要ですが、受容しているのは$CURR|Y$%だけです。"
  EMBRACE_INSTI_COST:2 "$NAME|Y$を受容するには$COST|Y$¤の費用がかかります。"
  MANAGE_OVEREXTENSION:0 "過剰拡大を管理する"
- EMPEROR_DIPACTIONS_DESC:0 "\n皇帝は次のような外交的行動をとることができます：\n$LIST|Y$"
- PAPAL_CONTROLLER_DIPACTIONS_DESC:0 "教皇の支配者は次のような外交的行動をとることができます：\n$LIST|Y$"
+ EMPEROR_DIPACTIONS_DESC:0 "\n皇帝は以下の外交行動ができます：\n$LIST|Y$"
+ PAPAL_CONTROLLER_DIPACTIONS_DESC:0 "教皇の支配者は以下の外交行動ができます：\n$LIST|Y$"
  PAPACY_NEXT_CARDINALS:0 "§Y枢機卿候補§W"
  UNIT_UNLOCKED_AT_TECH:0 "「$UNIT|Y$」は$TECH$（$LEVEL$）で解禁されます。"
  UNIT_REORG_TRANSFER:0 "クリックすると、このタイプのユニット全てを転送します。\n右クリックすると、このタイプのユニットの半分を転送します。"
