--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -1797,8 +1797,8 @@
  HRE_ELECTOR:0 "§Y$NAME$§Wは神聖ローマ帝国の選帝候です。現皇帝が死亡した際、§Y$VOTE$§Wの統治者が皇帝になるよう支持するでしょう。"
  HRE_MEMBER:0 "§Y$NAME$§Wは神聖ローマ帝国領邦です。"
  HRE_FREE_CITY:0 "§Y$NAME$§Wは神聖ローマ帝国の自由都市です。"
- HRE_RELATION:1 "$NAME$は、彼らが次の皇帝として投票したい順位において、§Y$POINTS$§Wポイントを我々に与えます。"
- EMPEROR_BENEFIT:0 "皇帝であることは以下の利点を提供します：\n"
+ HRE_RELATION:1 "$NAME$は次期皇帝として投票したい者へ順位付けをするときに、我々に§Y$POINTS$§Wポイントを与えます。"
+ EMPEROR_BENEFIT:0 "皇帝になると以下のような恩恵があります：\n"
  NUM_OF_PRINCES:0 "§Y$TOTAL$§!の諸侯と§Y$CITIES$§!の自由都市は、皇帝へ以下を提供しています：\n"
  HRE_NUM_MEMBERS:1 "これらは帝国を構成する国です。"
  HRE_NUM_MEMBERS_DELAYED:1 "外部からの脅威や皇帝の友好的な外交姿勢により、神聖ローマ帝国に加盟する国が増加するでしょう。高い帝国の権威は彼らを納得させる要因になります。"
@@ -3610,7 +3610,7 @@
  DECREASE_SPEED:0 "ゲームの速度を下げます"
  PTI_DESC:0 "この地域は探検するには、あまりにも遠くまた荒れ果てています。"
  TI_DESC:0 "この地域には探検家（海）か征服者（陸）しか入れません。"
- PW_GROWTH:1 "成長："
+ PW_GROWTH:1 "普及："
  NOPORTOTHERCONTINENT:0 "この州はどの港を通っても首都に行くことができません。"
  OTHERS_IN_COT:0 "交易中心地につながっている他の州。"
  RELATION_CHANGE_VALUE:0 "推測される年間の変化："
@@ -6957,7 +6957,7 @@
  IMPERIALRELATIONSTITLE:0 "恩寵の授与"
  IMPERIALRELATIONSNEWDESC:0 "$COUNTRY$に恩寵を与えますか？これは帝国の権威を§Y$COST$§W消費して関係を大幅に改善します。"
  IMPERIALRELATIONSDESC:0 "帝国の権威を§Y$COST$§W消費して関係を大幅に改善します。"
- NOAUTHORITY:1 "必要な§Y$NUM$§!の帝国の権威が不足しています。"
+ NOAUTHORITY:1 "必要な帝国の権威§Y$NUM$§!が不足しています。"
  BREAKMARCURIANEWDESC:0 "王室間の婚姻を破棄すると、通常貴族たちを混乱させます。しかし、我々は教皇の支配者として神の制裁を主張することができます。"
  BREAKRMCURIADESCR:0 "$COUNTRY$との王室間の婚姻を破棄してもよろしいですか？これは我々の関係を傷つけますが、教皇の支配者として、我々は安定度を失うことはありません。"
  PAPAL_INFLUENCE:0 "教皇への影響力"
@@ -7670,7 +7670,7 @@
  fervor_stability:0 "安定度への熱心な注力"
  fervor_stability_short:0 "安定度"
  fervor_base:0 "基本値"
- FERVOR_EFFECT:0 "$NAME|Y$を有効にすると、コストとして$COST|R$点の情熱が必要で、毎月同じ量の点を消費します。これを有効にしている間、次のような効果が得られます："
+ FERVOR_EFFECT:0 "$NAME|Y$を有効にすると、コストとして$COST|R$点の情熱が必要で、毎月同じ量の点を消費します。これを有効にしている間、次の効果が得られます："
  ENABLED:0 "有効"
  DISABLED:0 "無効"
  fervor_modifier:0 "情熱力"
