--- a/extract/localisation/achievements_l_english.yml
+++ b/extract/localisation/achievements_l_english.yml
@@ -465,7 +465,7 @@
  NEW_ACHIEVEMENT_12_20_NAME:0 "A Hero’s Welcome"
  NEW_ACHIEVEMENT_12_20_DESC:0 "Starting as Karaman, form the Sultanate of Rum."
  NEW_ACHIEVEMENT_12_21_NAME:0 "David the Builder"
- NEW_ACHIEVEMENT_12_21_DESC:0 "As Imereti, form Georgia and have no free building slots."
+ NEW_ACHIEVEMENT_12_21_DESC:0 "As Georgia have no free building slots in any owned province."
  NEW_ACHIEVEMENT_12_22_NAME:0 "Voltaire's Nightmare"
  NEW_ACHIEVEMENT_12_22_DESC:1 "Have at least 100 countries in the HRE."
  NEW_ACHIEVEMENT_12_24_NAME:0 "Pandya Empire"
@@ -717,3 +717,23 @@
  NEW_ACHIEVEMENT_104_DESC:0 "Starting as England, form the Angevin Kingdom and enact all the 'Acts of Crown' parliamentary issues."
  NEW_ACHIEVEMENT_105_NAME:0 "The Reapers"
  NEW_ACHIEVEMENT_105_DESC:0 "Starting as Aragon, be a Peasant Republic and have Madrid and Paris owned by any Peasant Republic."
+
+ # King of Kings
+ NEW_ACHIEVEMENT_106_NAME:0 "King of Kings"
+ NEW_ACHIEVEMENT_106_DESC:0 "Complete the Persian mission tree."
+ NEW_ACHIEVEMENT_107_NAME:0 "Restore the Pentarchy"
+ NEW_ACHIEVEMENT_107_DESC:0 "Starting as Byzantium, own Rome, Constantinople, Alexandria, Antioch, and Jerusalem while being Orthodox."
+ NEW_ACHIEVEMENT_108_NAME:0 "Mets Hayk"
+ NEW_ACHIEVEMENT_108_DESC:0 "Starting as Karabakh, own, core, and convert to Coptic the borders of Great Armenia."
+ NEW_ACHIEVEMENT_109_NAME:0 "Desert Power"
+ NEW_ACHIEVEMENT_109_DESC:0 "Starting as an Arabian Tribe, have the Oasis privilege enacted, and more than 1000 development in the Arabian Region"
+ NEW_ACHIEVEMENT_110_NAME:0 "Breadbasket of the World"
+ NEW_ACHIEVEMENT_110_DESC:0 "As the Mamluks, export grain to every continent at least once."
+ NEW_ACHIEVEMENT_111_NAME:0 "Truly Good Maaaaa-tch"
+ NEW_ACHIEVEMENT_111_DESC:0 "Starting as either Aq Qoyunlu or Qara Qoyunlu, have a royal marriage and an alliance with Ramazan."
+ NEW_ACHIEVEMENT_112_NAME:0 "The Last Crusade"
+ NEW_ACHIEVEMENT_112_DESC:0 "Starting as Byzantium, control Venezia, and make sure that the country Venice doesn't exist."
+ NEW_ACHIEVEMENT_113_NAME:0 "Legacy of Saint George"
+ NEW_ACHIEVEMENT_113_DESC:0 "As Georgia, have Genoa, Aragon, England, and Trier as vassals, while controlling Wales."
+ NEW_ACHIEVEMENT_114_NAME:0 "The Zoro-Austrians"
+ NEW_ACHIEVEMENT_114_DESC:0 "Starting as Austria, convert to Zoroastrianism, and complete the Persian Zoroastrian missions."
