--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -1291,7 +1291,7 @@
  angkor_wat:0 "アンコール・ワット"
  petra:0 "ペトラ"
  cologne_cathedral:0 "ケルン大聖堂"
- kremlin:0 "クレムリン"
+ kremlin:1 "Moscow Kremlin"
  chichen_itza:0 "チチェン・イッツァ"
  himeji_castle:0 "姫路城"
  moai:0 "モアイ"
@@ -1630,35 +1630,35 @@
  custom_curia_powers_cost:0 "教皇の親族"
  custom_curia_powers_cost_desc:0 "自国の支配者の一門の中に、聖座の重要な枢機卿がいる。彼らを利用すれば、教皇から受けるいくつかの御恩から簡単に逃れることができる。"
  custom_prestige_per_development_from_conversion:0 "宣教師の論争"
- custom_prestige_per_development_from_conversion_desc:0 "自国の宣教師は、熱狂と改宗の国際的な論争で自身の技能を証明することに決めた。改宗した州ごとに、領内では信仰の兄弟姉妹の羨望を享受している｡"
+ custom_prestige_per_development_from_conversion_desc:0 "Our missionaries have decided to prove their skills in an international contest of fervor and conversions. With each converted province, our realm enjoys the envy of our brothers and sisters in faith!"
  custom_good_monthly_karma:0 "祝福されたカルマ"
- custom_good_monthly_karma_desc:0 "自国の宮廷の過去の生活は、謙虚で信心深いものであった。彼らの過去の行為は、自国を祝福しているようだ…"
+ custom_good_monthly_karma_desc:0 "The past lives of our court have been ones of humility and piety. It seems like their past deeds have blessed our nation..."
  custom_bad_monthly_karma:0 "呪われたカルマ"
- custom_bad_monthly_karma_desc:0 "自国の宮廷は全員が前世で子猫に水をかけていた者たちだ。彼らの行動によるカルマは今でも自領を呪っている…"
+ custom_bad_monthly_karma_desc:0 "All of our court used to be people who poured water over kittens in their past lives. The karma from these actions still curses our realm..."
  custom_min_autonomy_in_territories:0 "代理総督"
  custom_min_autonomy_in_territories_desc:0 "膨大な領地の管理は面倒だし、そこに住む多くの人々を把握するのも大変だ。王室からの代理人を登用することで、君主はこれらの領土の自治権を確実に維持できる。"
  custom_free_policy:0 "信頼に足る統治"
  custom_free_policy_desc:0 "自国の統治者は、政策の設立と維持を約束した。これは、どの時代のどの統治者にとっても非常に珍しいことだ。"
  custom_possible_policy:0 "開明的な政府"
- custom_possible_policy_desc:0 "頑固一徹のごとく、一つの政策だけにこだわると、時代遅れの政府になってしまう。新しい考えや政策に対して窓口を開放し、必要に応じて施行していくことが必要だ。"
+ custom_possible_policy_desc:0 "Being stoic and staying only one of the path of policies leads to an outdated government. We need to be open for new ideas and policies and enact them when necessary."
  custom_innovativeness_gain:0 "革新的刷新"
  custom_innovativeness_gain_desc:0 "我が国の科学力は世界一！それを否定するのは大馬鹿者だけだ！"
  custom_trade_company_investment_cost:0 "国際投資家"
  custom_trade_company_investment_cost_desc:0 "交易会社の格上げ費用は値が張るものだ｡本当に高い。しかし、外国人投資家の資本があれば、この事業に問題なく資金投入できる。"
  custom_admiral_cost:0 "拡大された海軍将校"
- custom_admiral_cost_desc:0 "自国の提督は、海軍の世界においては本当に最高の提督であるが、戦場でその一人が倒れれば、その代わりに非常に高い費用がかかる。海軍士官を拡大することで、最新世代の大提督となるかもしれない優秀な水兵をより多く確保できる。"
+ custom_admiral_cost_desc:0 "While our admirals are the very best the naval world has to offer, they are very expensive to replace when one of them falls in battle. By expanding the naval officers, we have greater access to talented sailors, who might be the newest generation of great admirals."
  custom_global_naval_barrage_cost:0 "組織化された海軍攻撃"
- custom_global_naval_barrage_cost_desc:0 "戦略的な艦砲射撃には、見た目以上に多くの計画が必要だ。艦船や大砲の編成を工夫することで、計画速度を上げ、資源を節約しながら敵の防御を切り崩すことができる！"
+ custom_global_naval_barrage_cost_desc:0 "A strategic naval bombardment requires a lot more planning than it might appear. With a better organization of our ships and cannons, we can speed the planning process up and save resources while shredding through the defenses of our enemies!"
  custom_accept_vassalization_reasons:0 "超常的なカリスマ"
  custom_accept_vassalization_reasons_desc:0 "手の仕草一つで、我らの統治者はどんなに頑固な王でも説得し臣下にすることができる。統治者には超常的な力があると考える人もいれば、単にカリスマ性があるだけだと考える人もいる。"
  custom_transfer_trade_power_reasons:0 "納得のいく貿易協定"
  custom_transfer_trade_power_reasons_desc:0 "協定の内容は簡単だ。あなたは我々に交易力を提供する。私はより多くの金を稼ぐ。そしてあなたは生き永らえる。この条件でどうだ？"
  custom_country_diplomatic_power:0 "外交評議会"
- custom_country_diplomatic_power_desc:0 "全部の仕事を統治者が抱えている訳ではない。外交、交易、海軍に関する重要な仕事の多くは、13人からなる評議会が担当している。指揮系統として、一人一人それぞれが、統治者直下にあり、国内で最も多くの秘密を抱える人物である。"
+ custom_country_diplomatic_power_desc:0 "Not every task belongs to the ruler. Many important jobs regarding diplomacy, trade, and the navy are handled by a council of thirteen members. One of each is just slightly under our ruler in the chain of command and is the most secretive figure in our realm."
  custom_discovered_relations_impact:0 "逆心理"
- custom_discovered_relations_impact_desc:0 "時折、諜報員が捕まる。それを防ぐことは無理だ。しかし、逆心理学を用いれば、60%の確率で相手国に、実は彼らは偵察されたかったのだ、と思わせることができる。"
+ custom_discovered_relations_impact_desc:0 "Sometimes spies get caught. There's nothing we can do to prevent it. However, by using reverse psychology we can convince the other nations that they actually wanted to be spied on sixty percent of the time."
  custom_center_of_trade_upgrade_cost:0 "篤志家の投資"
- custom_center_of_trade_upgrade_cost_desc:0 "新しい家や仕事を確約することで、市民階級が自発的に交易中心地へ投資するよう仕向けることができる。だけど、約束はきっと果たすべきだろう…"
+ custom_center_of_trade_upgrade_cost_desc:0 "By promising new homes and work, we can motivate the Burghers to invest in the centers of trade voluntarily. We should probably make sure that we keep our promise though..."
  custom_ship_power_propagation:0 "塗装された交易船"
  custom_ship_power_propagation_desc:0 "よく知られているように、派手で攻撃的な色をした交易船はより速く、威嚇的であるため、競争相手を追い払うことができる。"
  custom_expel_minorities_cost:0 "餞別"
@@ -1666,7 +1666,7 @@
  custom_colonist_placement_chance:0 "快適な住処"
  custom_colonist_placement_chance_desc:0 "新世界の植民者たちが生き延びるため、快適で安全な家を提供し、彼らが必要とする全てを補填する｡"
  custom_appoint_cardinal_cost:0 "世界のための枢機卿"
- custom_appoint_cardinal_cost_desc:0 "お金が世界におけるカトリック権威の隘路となることは許されない。デダカットよりも神に献身的な枢機卿を選ぶことで、世界中の誰もが枢機卿の一人や二人を享受できる。"
+ custom_appoint_cardinal_cost_desc:0 "We cannot allow money to become the bottleneck for the authority of Catholicism in the world. By choosing the cardinals, who are more devoted to God than the Ducat, everyone in the world can enjoy a cardinal or two."
  custom_enforce_religion_cost:0 "大十字軍"
  custom_enforce_religion_cost_desc:0 "自国の戦士たちは、過去に見られた異教徒や異端者はおらず、信仰心と献身をもって戦う。我が兵たちが軍事的及び宗教的支配を示してくれたおかげで、異教徒や異端者は皆、自国の宗教に入ることに前向きになった。"
  custom_promote_culture_cost:0 "文化のるつぼ"
@@ -1674,33 +1674,33 @@
  custom_rival_change_cost:0 "敵の敵は…"
  custom_rival_change_cost_desc:0 "ライバル関係は決して固執するようなものではなく、これまでのライバル関係を捨てて、もっともっと大きな脅威に焦点を当てた方が得策であることも多い。"
  custom_global_ship_repair:0 "海軍用品の供給"
- custom_global_ship_repair_desc:0 "艦船の修理には二つのものが必要だ。修理の人員と物資である。組織改善により、損傷した艦船がどこかの港に到着した際、海軍用品の大部分が常に準備済みであるようにできる。"
+ custom_global_ship_repair_desc:0 "Repairing a ship requires two things: the manpower to repair them and the supplies. With a better organization, we can ensure that a good chunk of the naval supplies are always ready when a damaged ship arrives at any of our ports."
  custom_global_ship_cost:0 "造船所の伝統"
- custom_global_ship_cost_desc:0 "費用対効果が高いながら高品質の艦船を建造してきた長い歴史があり、新造船の費用をどの部分で削減できるかを知っている。"
+ custom_global_ship_cost_desc:0 "We have a long history of constructing cost-efficient yet high-quality ships and as such we know where we can cut corners with the costs of a new ship."
  custom_yearly_army_professionalism:0 "軍事学"
- custom_yearly_army_professionalism_desc:0 "自国の兵は全員、一定期間、軍事学校で戦争の基礎を学ぶ。そうすることで、自軍は理論的な専門家集団となる。\n彼らに今必要なのは、実際に戦争を経験し、本物の専門家になることだ…"
+ custom_yearly_army_professionalism_desc:0 "Every one of our soldiers will spend a certain amount of time in the military school to learn the basics of warfare. This way, our armies will be built upon theoretical professionals.\nAll they need is now actual war experience to make them to actual professionals..."
  custom_drill_gain_modifier:0 "疑似戦争"
- custom_drill_gain_modifier_desc:0 "多くの大将が、自身の部隊に戦争の基本やどう動くべきかを教練している。彼らは、人道的とは言えないまでも、程々に部隊を訓練している。自軍はその点では異なっており、少佐が訓練している。少佐は、訓練中に自分たちの大砲を使って、兵士の生活をできる限り厳しく、現実的なものにしようとする｡"
+ custom_drill_gain_modifier_desc:0 "Many generals train their troops just the basics of warfare and how to behave. They use moderate, if not too humane ways to drill their troops. Our army is different in that regard as they are drilled by a major, who likes to make the lives of the soldiers as hard and realistic as possible by using our own cannons against them during training."
  custom_drill_decay_modifier:0 "厳格な士官"
  custom_drill_decay_modifier_desc:0 "兵士は平時や戦闘後の回復期での訓練を忘れがちだ。それを防ぐため、自国には非常に厳格な士官がいる｡"
  custom_infantry_fire:0 "射撃訓練"
  custom_infantry_fire_desc:0 "自国の歩兵は、毎日休むことなく銃の腕を磨いている。その狙撃は正確で、致命傷を与える。"
  custom_infantry_shock:0 "近接戦闘技術"
- custom_infantry_shock_desc:0 "射程距離がある武器を所持している方が、当然近接武器のみの所持より良いが、混沌とした戦闘においては、それが保証されているわけではない。無駄な死を避けるために、自軍の部隊は全員、剣や槍を振るう訓練を受けており、さらに非武装時の戦闘訓練も実施している｡"
+ custom_infantry_shock_desc:0 "While having a ranged weapon is always better than having only a melee weapon is of course better, it is not guaranteed in the chaos of the battle. In order to avoid unnecessary deaths, all of our troops are trained in wielding swords, pikes, and even in unarmed combat."
  custom_cavalry_fire:0 "規律ある馬"
  custom_cavalry_fire_desc:0 "白熱した戦闘中において、馬はまず落ち着いた状態を保てないので、騎兵隊は射撃武器の安定使用に苦慮していた。しかし、銃声や大砲の発射音に慣れた、よく調教された馬を導入することで、この状況は一変した。"
  custom_cavalry_shock:0 "突撃ぃぃぃぃぃ！"
- custom_cavalry_shock_desc:0 "秩序と規律は、戦闘前、戦闘後の兵士のためのものだ。しかし、戦闘中における騎兵の規範はただ一つのみだ。突っ込めええええええ！"
+ custom_cavalry_shock_desc:0 "Order and discipline are for the soldiers before and after the fight. During the fight, however, there is only one rule for the cavalry: Chaaaarrrrge!"
  custom_artillery_shock:0 "前線の大砲"
  custom_artillery_shock_desc:0 "時折、砲兵のみが実際唯一の正しい選択肢の場合がある｡"
  custom_reserves_organisation:0 "冷徹な能率性"
- custom_reserves_organisation_desc:0 "わが軍の兵士は訓練中に多くの精神的、肉体的苦痛を経験しているため、戦友の死は彼らにとって無意味なものとなっている。"
+ custom_reserves_organisation_desc:0 "Our troops have gone through so much emotional and physical pain during their training, the loss of their comrades has become irrelevant to them."
  custom_global_supply_limit_modifier:0 "兵站の中心"
- custom_global_supply_limit_modifier_desc:0 "説明できないような出来事の連続で、自国の将官たちは、この時代には類を見ないほどの兵站計画を手に入れることができた。どうやってこの計画を手に入れたかは、もはや知る由もないが、この計画は自国の部隊編制時に重宝することだろう。"
+ custom_global_supply_limit_modifier_desc:0 "In an unexplainable chain of events, our general staff managed to get logistic plans, which are way above anything similar during this time period. While we will never know how they got these plans, they still will come in handy when organizing our troops in our own country."
  custom_general_cost:0 "軍の階級拡大"
  custom_general_cost_desc:0 "将校の数を増やせば、国家のために大将軍として活躍できる有能な人材をより多く確保できることだろう。"
  custom_raze_power_gain:0 "襲撃と略奪"
- custom_raze_power_gain_desc:0 "さあ、現実を見てみよう｡都市全域が真っ平らになるまで破壊し、財産を掠奪し、家を収奪すること以上に満足できることなんて無いよね？\nえ、あるの？まあ、この国にはないけどね！"
+ custom_raze_power_gain_desc:0 "Let's be real: is there anything more satisfying than leveling entire cities, raiding their wealth, and pillaging their homes?\nOh, there is? Well, not in this country!"
  custom_manpower_in_true_faith_provinces:0 "宗教による徴兵"
  custom_manpower_in_true_faith_provinces_desc:0 "軍事と宗教の機関は通常分かれているが、自国のように宗教の根源が根深い国では、真の信仰を持つ者たちが軍隊で戦うことができるのは極々当たり前のことだ。"
  custom_country_military_power:0 "軍事政府"
@@ -1814,7 +1814,7 @@
  province_is_buddhist_or_accepts_buddhism_at:0 "§Y[Root.GetName]§!の宗教が§Y上座部仏教§!、§Y密教§!または§Y大乗仏教§!のいずれかであり、その宗教が国教、融合した信仰または調和した宗教のいずれかである。"
  province_is_buddhist_or_accepts_buddhism_bt:0 "§Y[Root.GetName]§!の宗教が§Y儒教§!であり、領有国が§Y上座部仏教§!、§Y密教§!または§Y大乗仏教§!のいずれかを調和した宗教としている。"
  province_is_buddhist_or_accepts_buddhism_ct:0 "§Y[Root.GetName]§!の宗教が§Yテングリ§!であり、領有国が§Y上座部仏教§!、§Y密教§!または§Y大乗仏教§!のいずれかを融合した信仰としている。"
- province_is_buddhist_or_accepts_buddhism_dt:0 "§Y[Root.GetName]§!の宗教と領有国の国教が§Y神道§!である。"
+ province_is_buddhist_or_accepts_buddhism_dt:1 "The Religion of §Y[Root.GetName]§! and of the owner is §YShinto§!."
  province_is_buddhist_or_accepts_buddhism_et:0 "§Y[Root.GetName]§!の宗教と領有国の国教が§Yヒンドゥー教§!であり、主神が§Y仏教§!である。"
  province_is_buddhist_or_accepts_buddhism_ft:0 "§Y[Root.GetName]§!の宗教と領有国の国教が§Y呪物崇拝§!であり、主神が§Y仏教§!である。"
  province_is_or_accepts_christian_tt:0 "§Y[Root.GetName]§!の宗教が§Yキリスト教§!であり、その宗教が国教または融合した信仰である。"
