--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -740,15 +740,15 @@
  DIPLOMAT_RETURNED_BTN3:0 "移動"
  DIPLOMAT_RETURNED_MAP:0 "外交官帰着"
  KNOWLEDGE_SHARING_TITLE:0 "知識共有の提供"
- KNOWLEDGE_SHARING_SETUP:1 "ある国が知識共有に関する決定をしたとき"
+ KNOWLEDGE_SHARING_SETUP:3 "When we offer Knowledge Sharing"
  KNOWLEDGE_SHARING_HEADER:0 ""
  KNOWLEDGE_SHARING_1:0 "$RECIPIENT_COUNTRY$からの使者"
  KNOWLEDGE_SHARING_2:0 "$MONARCHTITLE$、$TYPE$知らせです。"
- KNOWLEDGE_SHARING_3:0 "$RECIPIENT$が"
+ KNOWLEDGE_SHARING_3:2 "$RECIPIENT_COUNTRY$"
  KNOWLEDGE_SHARING_4:0 "知識共有の提案について"
- KNOWLEDGE_SHARING_5:0 "$RESULT$ことを決断しました。"
+ KNOWLEDGE_SHARING_5:2 "to $RESULT$ the offer of Knowledge Sharing from us."
  KNOWLEDGE_SHARING_6:0 "$EFFECT$"
- KNOWLEDGE_SHARING_LOG:2 "$RECIPIENT$、$ACTOR$からの知識共有提案を$RESULT$"
+ KNOWLEDGE_SHARING_LOG:4 "$RECIPIENT_COUNTRY$ decided to $RESULT$ the offer of Knowledge Sharing from us."
  KNOWLEDGE_SHARING_BTN1:1 "OK"
  KNOWLEDGE_SHARING_BTN2:1 "OK"
  KNOWLEDGE_SHARING_BTN3:0 "移動"
@@ -7128,3 +7128,18 @@
  REMOVESEATINPARLIAMENT_BTN3:0 "移動"
  REMOVESEATINPARLIAMENT_MAP:0 "議席はく奪"
  fleeing_serfs_tt:0 "国境の州の1つで開発度がランダムに§G1§!付与されます"
+ ASK_KNOWLEDGE_SHARING_TITLE:0 "Asked Knowledge Sharing"
+ ASK_KNOWLEDGE_SHARING_SETUP:1 "When a nation asks us for Knowledge Sharing"
+ ASK_KNOWLEDGE_SHARING_HEADER:0 "Herald from"
+ ASK_KNOWLEDGE_SHARING_1:0 "$ACTOR_COUNTRY$"
+ ASK_KNOWLEDGE_SHARING_2:0 "$MONARCHTITLE$, we have $TYPE$ news"
+ ASK_KNOWLEDGE_SHARING_3:1 "We"
+ ASK_KNOWLEDGE_SHARING_4:0 "decided"
+ ASK_KNOWLEDGE_SHARING_5:1 "to $RESULT$ the request for Knowledge Sharing from $RECIPIENT_COUNTRY$."
+ ASK_KNOWLEDGE_SHARING_6:0 "$EFFECT$"
+ ASK_KNOWLEDGE_SHARING_LOG:1 "We decided to $RESULT$ the request for Knowledge Sharing from $RECIPIENT_COUNTRY$."
+ ASK_KNOWLEDGE_SHARING_BTN1:0 "OK"
+ ASK_KNOWLEDGE_SHARING_BTN2:0 "OK"
+ ASK_KNOWLEDGE_SHARING_BTN3:0 "移動"
+ EMBRACEINST_OTHER_6:0 "$EFFECT$"
+ EMBRACEINST_5:0 "$EFFECT$"
