--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1899,9 +1899,9 @@
  pirate_the_pirate_round_desc:0 "豊かなインドの海岸を襲うことは我々に多くの戦利品をもたらすだろう。しかし、もし、彼らの港を使用して補給しようとするなら、マダガスカルの海賊と共有せねばならない。もしそうでないなら、そうでないならば…"
  all_gold_provinces_around_the_caribbean:0 "このミッションを達成する事により、カリブ海及びその周辺で金を産出する全ての州に恒久的な請求権を獲得"
  a_mighty_pirate_leader:0 "§Y[Root.GetName]§!には支配者として有名な海賊指揮官がいます"
- dh_tim_khorasan_one_title:0 "東ホラーサーンの支配"
+ dh_tim_khorasan_one_title:0 "西ホラーサーンの支配"
  dh_tim_khorasan_one_desc:0 "我々の後期の主君である跛者のティムールの中心地は、我々の遺産の中心である。我々それらをすべて所有しているとき、我々の主張ははるかに価値あるものとなるだろう。"
- dh_tim_khorasan_two_title:0 "西ホラーサーンの支配"
+ dh_tim_khorasan_two_title:0 "東ホラーサーンの支配"
  dh_tim_khorasan_two_desc:0 "インドの異国の土地に向かって伸びる西ホラーサーンは、我々の王国の継続的な成功に不可欠である。"
  dh_tim_army_built_title:0 "戦争の準備"
  dh_tim_army_built_desc:0 "偉大なティムールの群れは恐ろしい光景であった。我々は、哀れな少数の兵士と共に彼の遺産を再統一することを期待することはできない。"
@@ -1995,3 +1995,15 @@
  gc_cas_spa_navarra_bt:0 "既にミッション「§Yアンダルシアの再請求§!」を達成している場合、§Y[Root.GetName]§!は§Yベイラ§!および§Yアレンテージョ§!地域に恒久的な請求権を獲得します。"
  gc_cas_spa_army_ready2_title:0 "レコンキスタの準備"
  gc_cas_spa_army_ready2_desc:0 "あまりにも長い間、我々はイベリアの人々を保護する義務に失敗してきた。我々は一つの旗の下で彼らを結びつけるために準備すべきだ。"
+ arl_build_army_mission_title:1 "Army of the Realm"
+ arl_build_army_mission_desc:0 "Any growing country must maintain a reasonably sized army. By expanding our forces we can both further our political interests abroad and stimulate our domestic economy."
+ arl_expand_country_mission_title:1 "[Root.GetName]の保護"
+ arl_expand_country_mission_desc:0 "We have been given a strong and viable country by those that came before us. It is time we expand upon our legacy and grow [Root.GetName] so that we may leave a stronger and more influential country to our children."
+ arl_conquer_states_title:1 "Expand the Royal Domain"
+ arl_conquer_states_desc:0 "As we expand we must ensure that we can truly integrate the new lands we conquer into our administrative apparatus. After conquest comes the hard work of establishing true [Root.GetAdjective] Rule over the conquered territories."
+ arl_unite_home_region_title:1 "ペルシアの統合"
+ arl_unite_home_region_desc:0 "The time has come to put all our hard work to build a viable military machine to the test. We must rise to be the true hegemon of our region, respected and feared by all."
+ kok_mam_holy_cities_title:0 "二聖都"
+ kok_mam_holy_cities_desc:0 "Mecca and Medina are the holiest sites in Islam. Politics in the region are complex, but we are in a position to subjugate both Sharifs. If we can control both cities under two subjects, there may be an opportunity for consolidation."
+ kok_mam_subjugate_beyliks_title:0 "君侯国の平定"
+ kok_mam_subjugate_beyliks_desc:0 "The Turkish Beyliks of Anatolia have paid us tribute in the past and acknowledged our overlordship. Now they have delusions of independence despite the mighty Ottoman Sultan breathing down their necks. It is time to reassert our power in Anatolia."
