--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -454,7 +454,7 @@
  RUS_ideas_start:1 "ロシアの伝統"
  RUS_ideas_bonus:1 "ロシアの宿願"
  land_of_the_rus:0 "ルーシの地"
- land_of_the_rus_desc:0 "萬の言、一つに帰す。天下の地、皆祖国に属す。"
+ land_of_the_rus_desc:1 "力を合わせることで、ルーシは侮り難い勢力となるだろう。"
  life_long_conscription:0 "終身兵役制"
  life_long_conscription_desc:0 "絶えず拡大する陸軍の人員を確保するのは難しい。兵役期間を延長し終身制にすることで、兵員を確保しよう。そうすれば、能力を持たず職に就けないような人々にも就職先が与えられ、社会的流動性の向上にも繋がるだろう。"
  russian_artillery_yard:0 "砲兵工廠"
@@ -688,7 +688,7 @@
  the_qizilbash_desc:1 "クズルバシュ（赤い頭）とは、シーア派トルコ人による軍人集団だ。彼らは信仰のためならいつでも戦い、そして死ぬことができる。彼らは我が国のための力となるであろうし、我が国の軍隊の中核となるかもしれない。"
  persian_rug_production:0 "ペルシア絨毯"
  persian_rug_production_desc:0 "長きにわたり、ペルシアは絨毯や敷物の製造で有名だった。しかし、モンゴル人たちがペルシアに攻め込んだ時、絨毯産業は壊滅的な打撃をこうむった。ペルシアを復活させるには、経済を再建する必要がある。かつての強みを、蘇らせねばならない。"
- the_ghulams:0 "グラームの設立"
+ the_ghulams:1 "Found the Ghilman"
  the_ghulams_desc:0 "かつての我が国の軍隊は、王よりも自らに忠実な人々の軍である、クズルバシュの力に依存していた。しかし、国防には、歩兵と騎兵を備えた、シャーに忠実な常備軍を創設することが必要だ。"
  improved_silk_road:0 "シルクロードの整備"
  improved_silk_road_desc:0 "街道や橋の整備、街道の警備体制の構築、街道上での宿場の建設…これらはすべて、商人たちの自由な往来を促進するためであり、我が国の税収を増加させるためでもある。もちろん、そのための費用として、少しぐらいは通行料を取ろう。"
@@ -922,7 +922,7 @@
  regulations_for_mercenaries:0 "傭兵の組織化"
  regulations_for_mercenaries_desc:0 "傭兵はあまり使いたくない存在だ。だが、いずれ奴らを使わざるを得ない時が来るだろう。傭兵たちが持つべき装備をあらかじめ規定しておくことで、迅速に、そして安く、雇用することができるだろう。"
  repopulation_of_countryside:0 "辺境地域への再入植"
- repopulation_of_countryside_desc:0 "疫病や戦争により、辺境地域は荒廃し、人の住まない土地になってしまった。再度の入植を行い、軍の基地を建設することで、そうした地域を再建できるだろう。"
+ repopulation_of_countryside_desc:1 "Plague, war and civil war have taken their toll on the countryside, leaving it devastated and not suitable for use. We need to encourage settlers into the countryside to rebuild it as a base for our economy."
  byz_state_admin_reform:0 "行政改革"
  byz_state_admin_reform_desc:0 "我が国では、時代遅れの行政機構が未だに用いられている。新たな時代に備えるためには、これらを刷新しなくてはならない。まずは徴税機構を改革しよう。徴税委託制を廃止すれば、農民の負担を減らしつつ、税収を増やすことができるだろう。"
  byz_admin_power:0 "権限の委譲"
@@ -930,7 +930,7 @@
  merchant_class:0 "ビザンツ商人団"
  merchant_class_desc:0 "かつてのコンスタンティノープルは地中海交易の中心地だった。往時の栄光は戻らないかもしれないが、交易拠点としての重要性を今よりも高めることはできるかもしれない。"
  new_imperial_army:0 "新帝国軍"
- new_imperial_army_desc:0 "かつて強大であった頃の帝国は大軍隊を持っていた。そして帝国は今や再び強国となった。陸軍を改革し、今まで以上に強大な軍隊を建設しなくては。"
+ new_imperial_army_desc:1 "The great epochs of Byzantine history have had a great army, and this will be a great epoch. Let us reform the army to create a new force of more capable men than ever before."
  ecumenical_patriarch:0 "総主教座の復活"
  ecumenical_patriarch_desc:0 "正教会は長く崩壊状態にあった。総主教座を復活させ、教会の栄光を蘇らせよう。"
  VIJ_ideas:0 "ヴィジャヤナガルのアイデア"
@@ -1626,7 +1626,7 @@
  irish_ideas_start:0 "アイルランドの伝統"
  irish_ideas_bonus:0 "アイルランドの宿願"
  irish_endurance:0 "アイルランドの忍耐"
- irish_endurance_desc:0 "何十年にもわたった疫病や飢饉は、イングランドの侵略者たちの大部分を我々の土地から押しのけた。一方で、アイルランドの人々は、悲惨な経験からいっそう強く成長している。はい、神の緑の大地においてアイルランド人より強い者はいない！"
+ irish_endurance_desc:0 "数十年にわたる疫病と飢饉は、イングランドからの侵略者をほとんどこの地から追いやった。その一方で、アイルランド人は悲惨な経験を経て、より強くなっていく。そう、いかなる地にも、アイルランド人ほど強い人間はいないのだ！"
  the_clanns:0 "氏族"
  the_clanns_desc:0 "アイルランドの氏族は、土地や一族の経営のための強力な政治体制を構成している。小規模な一族においては、家族を維持し、自分たちの土地を保護することは、一族により選出された族長が担当している。土地と指導は、タニストリーの一族の選定制度を通じて行われる。王の氏族から象徴的で崇高な王が選出され、アイルランドの一族の間に連合の絆を形成する。"
  more_than_irish:0 "アイルランド以上にアイルランドたれ"
@@ -7240,3 +7240,8 @@
  desc_mercenary_leadership:0 "傭兵将軍が[Root.GetAdjective]の宮廷顧問に昇進したことで、我が傭兵団に多大な利益がもたらされている。そのため、我々の大義に対する彼らの士気は類を見ないものとなっている。"
  negative_mercenary_reputation:0 "傭兵の評判"
  desc_negative_mercenary_reputation:0 "国内の紛争のための傭兵部隊の展開は、自国の評判に傷をつけている。どうも、自国はどんな裏切り者の傭兵隊長と同じくらい名誉がないようだ。"
+ MAM2_ideas:0 "マムルークのアイデア"
+ MAM2_ideas_start:0 "マムルークの伝統"
+ MAM2_ideas_bonus:0 "マムルークの宿願"
+ mam_monopoly_ports_evolved:0 "Monopoly Ports"
+ mam_monopoly_ports_evolved_desc:0 "To ensure we get our trade where we want it (and thus tax it) we will ensure that certain ports are reserved for certain goods. We will of course ensure generous terms for using these ports, but our generosity will be more than compensated by the extra trade."
