--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -128,10 +128,10 @@
  CANCEL_GREAT_PROJECT_UPGRADE_PROGRESS:0 "$PROVINCE$における$BUILDING$のアップグレードを中止してもよろしいですか？投資額の$PERCENTAGE_RETURNED|%1Y$が返還されます。"
  SPEND_MANPOWER_TO_BOOST_PROGRESS:0 "プロジェクトを$DAYS|Y$日進めるために人的資源を§Y$NUMBER$§W使用する"
  SPEND_MONEY_TO_BOOST_PROGRESS:0 "プロジェクトを$DAYS|Y$日進めるために§Y$COST$§W¤使用する"
- CANNOT_SPEND_MANPOWER_TO_BOOST_PROGRESS_NOT_ENOUGH_MANPOWER:0 "進捗を進めるのに十分な人的資源を保有していません。"
- CANNOT_SPEND_MONEY_TO_BOOST_PROGRESS_NOT_ENOUGH_CASH:0 "進捗を進めるのに十分な資金を保有していません。"
+ CANNOT_SPEND_MANPOWER_TO_BOOST_PROGRESS_NOT_ENOUGH_MANPOWER:1 "§R進捗を進めるのに十分な人的資源を保有していません。§!"
+ CANNOT_SPEND_MONEY_TO_BOOST_PROGRESS_NOT_ENOUGH_CASH:2 "§R進捗を進めるのに十分な資金を保有していません。§!"
  CANNOT_UPGRADE_GREAT_PROJECT_ALREADY_AT_MAX:0 "この$TYPE$は既に最良であり、さらにアップグレードすることはできません。"
- CANNOT_BOOST_PROGRESS_NO_CONSTRUCTION:0 "建設中の建物はありません。"
+ CANNOT_BOOST_PROGRESS_NO_CONSTRUCTION:2 "§R建設中の建物はありません。§!"
  CONFIRMGREATPROJECT_BOOST_TITLE:0 "建設加速の確認"
  CONFIRMGREATPROJECT_BOOST_MANPOWER_TEXT:0 "プロジェクトを$DAYS$日進めるために人的資源を$MANPOWER$使用してもよろしいですか？"
  CONFIRMGREATPROJECT_BOOST_MONEY_TEXT:0 "プロジェクトを$DAYS$日進めるために$COST|Y$¤使用してもよろしいですか？"
@@ -1772,7 +1772,7 @@
  INNOVATIVENESS_INCREASE_TECH:0 "技術先行：$VAL|3G$"
  INNOVATIVENESS_CHANGE_DESC_TT:1 "現在$VAL|3+$/月変化します。"
  MODIFIER_ENABLE_FORCED_MARCH:0 "強行軍を有効化"
- MODIFIER_REVERSE_RELATION_WITH_SAME_RELIGION:0 "同宗教の国家の評価"
+ MODIFIER_REVERSE_RELATION_WITH_SAME_RELIGION:1 "Opinion of Country from others of the same Religion"
  MODIFIER_JANISSARY_COST:0 "イェニチェリ連隊コスト"
  MODIFIER_CAWA_COST:0 "チェワ連隊コスト"
  MODIFIER_HUSSARS_COST:0 "驃騎兵連隊コスト"
@@ -2186,8 +2186,8 @@
  MERCENARY_COMPANY_NOWHERE_TO_HIRE:0 "あなたの国境内で$COMPANY|Y$が雇用されることはない。"
  SCALED_WITH_LOYALTY:0 "階級の忠誠度に比例"
  SCALED_WITH_INFLUENCE:0 "階級の影響力に比例"
- CHANGE_COUNTRY_COLOR_EFFECT:0 "国家の色が変更"
- CHANGE_COUNTRY_COLOR_EFFECT_SPECIFIC:0 "国家の色を$WHO|Y$に変更"
+ CHANGE_COUNTRY_COLOR_EFFECT:1 "国家の色が変更\n"
+ CHANGE_COUNTRY_COLOR_EFFECT_SPECIFIC:1 "国家の色を$WHO|Y$に変更\n"
  RESTORE_COUNTRY_COLOR_EFFECT:0 "国の色が元の色に戻る"
  CENTRALIZE_STATE_MAXED_OUT:0 "国家は既に可能な限り集権化されています。"
  CANNOT_DISMANTLE_UNSUBJUGATED_ELECTOR:0 "$COUNTRY|Y$は、我々と同盟・従属しているわけでも、首都が我々に支配されているわけでもありません。"
@@ -2203,3 +2203,4 @@
  DIPLO_SUBJECT_MUST_ACCEPT_FOR_PRICE:0 "$WHO$は好感度$NUM$のため参戦要請を受諾せねばなりません："
  DIPLO_SUBJECT_MUST_ACCEPT:0 "$WHO$は参戦要請を受諾せねばなりません："
  DIPLO_SUBJECT_MUST_ACCEPT_CO_BELLIGERENT:0 "$WHO$は供戦国として宣戦布告されました："
+ CANNOT_ASK_KNOWLEDGE_SHARE_ISATWAR:0 "You cannot ask to Share Knowledge when you are at war with them."
