--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -236,8 +236,8 @@
  HAVE_SPY_NETWORK_FROM:1 "§Y$TARGET$§!からの諜報網規模が§Y$VAL$§!以上である。\n"
  NOT_HAVE_SPY_NETWORK_FROM:1 "§Y$TARGET$§!からの諜報網規模が§Y$VAL$§!以上ではない。\n"
  HAVENT_CLAIM:0 "請求権を持っていない"
- HAVE_CLAIM_IN:0 "請求権を持っている"
- HAVE_PERMANENT_CLAIM_IN:0 "次への恒久的な請求権を持っている："
+ HAVE_CLAIM_IN:1 "$PROVINCE$に対する請求権を持っている"
+ HAVE_PERMANENT_CLAIM_IN:1 "$PROVINCE$に対する恒久的な請求権を持っている"
  PIETY_LESS_THAN:0 "信仰心が§Y$VAL$§!未満である。\n"
  PIETY_AT_LEAST:0 "信仰心が§Y$VAL$§!以上である。\n"
  KARMA_LESS_THAN:0 "カルマが§Y$VAL$§!未満である。\n"
@@ -300,7 +300,7 @@
  TRADE_MODIFIER_EFFECT:0 "交易力：$VAL$"
  TRADE_MODIFIER_EFFECT_PERCENT:0 "交易力補正：$VAL$"
  TRADE_MODIFIER_ADDED:1 "$WHO$は$DATE$までの間、§Y$WHERE$§!で§Y$WHAT$§!（$EFFECT$）を獲得します。\n"
- TRADE_MODIFIER_REMOVED:1 "$WHO$は§Y$WHERE$§!で§Y$WHAT$§!（$EFFECT$）を失います\n"
+ TRADE_MODIFIER_REMOVED:2 "$WHO$は§Y$WHERE$§!で§Y$WHAT$§!（$EFFECT|+=1$）を失います\n"
  HAVE_CORE_ALREADY:0 "すでにこの州で中核州です。"
  ANY_CORE_PROVINCE_STARTS:0 "いずれかの中核州"
  ANY_CORE_COUNTRY_STARTS:0 "いずれかの中核国"
