--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -460,7 +460,7 @@
  NEW_ACHIEVEMENT_12_20_NAME:0 "英雄の歓迎"
  NEW_ACHIEVEMENT_12_20_DESC:0 "カラマンで開始し、ルーム・セルジューク朝を形成する。"
  NEW_ACHIEVEMENT_12_21_NAME:0 "ダヴィド建設王"
- NEW_ACHIEVEMENT_12_21_DESC:0 "イメレティで、グルジアを形成し、建築可能な建築スロットを持たない。"
+ NEW_ACHIEVEMENT_12_21_DESC:0 "As Georgia have no free building slots in any owned province."
  NEW_ACHIEVEMENT_12_22_NAME:0 "ヴォルテールの悪夢"
  NEW_ACHIEVEMENT_12_22_DESC:1 "神聖ローマ帝国に100ヶ国以上所属する。"
  NEW_ACHIEVEMENT_12_24_NAME:0 "パーンディヤ帝国"
@@ -707,3 +707,21 @@
  NEW_ACHIEVEMENT_104_DESC:0 "イングランドで開始し、アンジュー帝国を形成し、すべての「王冠法」議題を制定させる。"
  NEW_ACHIEVEMENT_105_NAME:0 "収穫人たち"
  NEW_ACHIEVEMENT_105_DESC:0 "アラゴンで開始し、農民共和制になり、自国問わず農民共和制でマドリード、パリを領有する。"
+ NEW_ACHIEVEMENT_106_NAME:0 "King of Kings"
+ NEW_ACHIEVEMENT_106_DESC:0 "Complete the Persian mission tree."
+ NEW_ACHIEVEMENT_107_NAME:0 "五大総主教座の再建"
+ NEW_ACHIEVEMENT_107_DESC:0 "Starting as Byzantium, own Rome, Constantinople, Alexandria, Antioch, and Jerusalem while being Orthodox."
+ NEW_ACHIEVEMENT_108_NAME:0 "Mets Hayk"
+ NEW_ACHIEVEMENT_108_DESC:0 "Starting as Karabakh, own, core, and convert to Coptic the borders of Great Armenia."
+ NEW_ACHIEVEMENT_109_NAME:0 "Desert Power"
+ NEW_ACHIEVEMENT_109_DESC:0 "Starting as an Arabian Tribe, have the Oasis privilege enacted, and more than 1000 development in the Arabian Region"
+ NEW_ACHIEVEMENT_110_NAME:0 "Breadbasket of the World"
+ NEW_ACHIEVEMENT_110_DESC:0 "As the Mamluks, export grain to every continent at least once."
+ NEW_ACHIEVEMENT_111_NAME:0 "Truly Good Maaaaa-tch"
+ NEW_ACHIEVEMENT_111_DESC:0 "Starting as either Aq Qoyunlu or Qara Qoyunlu, have a royal marriage and an alliance with Ramazan."
+ NEW_ACHIEVEMENT_112_NAME:0 "The Last Crusade"
+ NEW_ACHIEVEMENT_112_DESC:0 "Starting as Byzantium, control Venezia, and make sure that the country Venice doesn't exist."
+ NEW_ACHIEVEMENT_113_NAME:0 "Legacy of Saint George"
+ NEW_ACHIEVEMENT_113_DESC:0 "As Georgia, have Genoa, Aragon, England, and Trier as vassals, while controlling Wales."
+ NEW_ACHIEVEMENT_114_NAME:0 "The Zoro-Austrians"
+ NEW_ACHIEVEMENT_114_DESC:0 "Starting as Austria, convert to Zoroastrianism, and complete the Persian Zoroastrian missions."
