--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -1049,12 +1049,12 @@
  isfahan_area:0 "エスファハーン"
  isfahan_area_name:0 "エスファハーン"
  isfahan_area_adj:0 "エスファハーン"
- azerbaijan_area:0 "アゼルバイジャン"
- azerbaijan_area_name:0 "アゼルバイジャン"
- azerbaijan_area_adj:0 "アゼルバイジャン"
- tabriz_area:0 "タブリーズ"
- tabriz_area_name:0 "タブリーズ"
- tabriz_area_adj:0 "タブリーズ"
+ azerbaijan_area:1 "ザンジャーン"
+ azerbaijan_area_name:1 "ザンジャーン"
+ azerbaijan_area_adj:1 "ザンジャーン"
+ tabriz_area:1 "アゼルバイジャン"
+ tabriz_area_name:1 "アゼルバイジャン"
+ tabriz_area_adj:1 "アゼルバイジャン"
  tabarestan_area:0 "タバリスターン"
  tabarestan_area_name:0 "タバリスターン"
  tabarestan_area_adj:0 "タバレスターン"
