--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -3330,7 +3330,7 @@
  flavor_nor.22.d:0 "15歳の若い船乗りの息子であったコート・アドラーは、ノルウェーを外海の後ろに残し、それ以来、低地諸国、地中海、そして遠くはインドのコロマンデル海岸で商船の船長として成功した。オランダ、イングランド、ヴェネツィア、トルコ海軍との交戦で戦時に船長を務めていたアデラーは、彼の世代にはほとんどない経験と人脈とを持っている。彼は様々な商業的な事業を通じ、かなりの個人的な富を獲得しており、そのうちのいくつかは彼の母国、特に彼がノルウェーの都市であるシーエンの郊外で開発し始めた財産に投資されている。\nアドラーのような手腕の人物は、国家への奉仕において確実に有効に使えるだろう。"
  flavor_nor.22.a:0 "注目に値する男だ！"
  flavor_nor.23.t:0 "オスロの大火"
- flavor_nor.23.d:0 "3日間、火災は木造の都市であるオスロを破壊し、今では国の首都のいくつかの建物を除いてすべてが灰に覆われている。火災がオスロを悩ませ、我々が今直面している破壊が完全に終わる前に、我々が再建するにあたって、都市を完全に移転すべきとの提案がなされた。木材で建設し、次の大惨事を待つ代わりに、我々の時代の首都にふさわしい建築と都市計画の巧みな技術を使って、アーケシュフース要塞の近くに再建することが提案されている。\nアーケシュフースに近いところで再建することで、我々は都市を適切に強化することができ、これらの時代に大きな利益をもたらすことができる。実際には以前の支配者はオスロの市民が希望する材料と様式で再建するのを難しくしていたので、適切な改修は非常にコストがかかる可能性が高い。"
+ flavor_nor.23.d:0 "3日間、火災は木造の都市であるオスロを破壊し、今ではかつての偉大なる都市のいくつかの建物を除いてすべてが灰に覆われている。火災がオスロを悩ませ、我々が今直面している破壊が完全に終わる前に、我々が再建するにあたって、都市を完全に移転すべきとの提案がなされた。木材で建設し、次の大惨事を待つ代わりに、我々の時代の首都にふさわしい建築と都市計画の巧みな技術を使って、アーケシュフース要塞の近くに再建することが提案されている。\nアーケシュフースに近いところで再建することで、我々は都市を適切に強化することができ、これらの時代に大きな利益をもたらすことができる。実際には以前の支配者はオスロの市民が希望する材料と様式で再建するのを難しくしていたので、適切な改修は非常にコストがかかる可能性が高い。"
  flavor_nor.23.a:0 "我々は新しい都市を確立しなければならない！"
  flavor_nor.23.b:0 "失われたものはなくなった、人々が好きなように再建させよう。"
  flavor_nor.24.t:0 "オランダ＝ノルウェーの関係強化"
