--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -109,10 +109,10 @@
  EVERY_OWNED_OR_NON_TRIBUTARY_PROV:0 "全州を自国もしくは自国の朝貢国以外の従属国で領有している"
  FRONTIER_TOOLTIP:0 "$COUNTRY|Y$は$PROVINCE|Y$に植民地を建設しています。現在の人口は$AMOUNT|0$です。人口は毎月$MIN$ー$MAX$の間で増加します。"
  RETURN_CORE_COUNTRY_OFFDESC:0 "$RECIPIENT$に対し、同盟国への好意の証として$TAG$の中核州$PROV$を返還するよう要求します。これには好感度が$FAVOURS$かかります。"
- land_units_killed:0 "殺された陸上ユニット"
- land_units_lost:0 "失った陸上ユニット"
- naval_units_killed:0 "殺された海上ユニット"
- naval_units_lost:0 "失った海上ユニット"
+ land_units_killed:1 "一会戦で殺された陸上ユニット"
+ land_units_lost:1 "一会戦で失った陸上ユニット"
+ naval_units_killed:1 "一海戦で殺された海上ユニット"
+ naval_units_lost:1 "一海戦で失った海上ユニット"
  total_land_units_killed:0 "殺された全陸上ユニット"
  total_land_units_lost:0 "失った全陸上ユニット"
  total_naval_units_killed:0 "殺された全海上ユニット"
@@ -148,20 +148,22 @@
  HRE_DISMANTLE_PRESTIGE:0 "自国に威信が$VAL|G1$与えられる。"
  ONLY_MANUFACTORIES:0 "工場"
  MANUFACTORIES_AND_INDUSTRIALIZATION:0 "工場§!と§Y産業革命"
- SIDETRUCEENDS_TITLE:0 "停戦の終了"
- SIDETRUCEENDS_SETUP:0 "自国と他国間で一方的な停戦が終了したとき。"
- SIDETRUCEENDS_HEADER:0 "宰相からの報告"
- SIDETRUCEENDS_1:0 "片側だけの停戦切れ"
- SIDETRUCEENDS_2:0 "$OUR_THEIR$の$US_THEM$との停戦が終了しました。"
- SIDETRUCEENDS_5:0 "$WE_THEY$は今、追加の罰則なしに$US_THEM$に宣戦布告することができます。"
- SIDETRUCEENDS_6:0 "これは片側だけの停戦でした。"
- SIDETRUCEENDS_LOG:0 "$ACTOR$と$RECIPIENT$の間の停戦は終了しています。"
- SIDETRUCEENDS_BTN1:0 "OK"
- SIDETRUCEENDS_BTN2:0 "OK"
- SIDETRUCEENDS_BTN3:0 "移動"
  OUR_CAPITAL:0 "自国の"
  WE_CAPITAL:0 "自国"
  THEY_CAPITAL:0 "彼ら"
  MODIFIER_ALLOWED_COSSACK_FRACTION:0 "コサック扶養限界比率"
  MODIFIER_ALLOWED_REV_GUARD_FRACTION:0 "革命衛兵扶養限界比率"
  MODIFIER_ALLOWED_RAJPUT_FRACTION:0 "ラージプート扶養限界比率"
+ OURSIDETRUCEENDS_TITLE:0 "Truce Ended"
+ OURSIDETRUCEENDS_SETUP:0 "When a one-sided truce ends between your nation and another."
+ OURSIDETRUCEENDS_HEADER:0 "Our Chancellor reports"
+ OURSIDETRUCEENDS_1:0 "One-sided Truce Expired"
+ OURSIDETRUCEENDS_2:1 "Our truce with $RECIPIENT$ ended."
+ OURSIDETRUCEENDS_5:1 "We can now declare war on them without additional penalties."
+ OURSIDETRUCEENDS_6:0 "This was a one-sided truce."
+ OURSIDETRUCEENDS_LOG:0 "The truce between $ACTOR$ and $RECIPIENT$ has ended."
+ OURSIDETRUCEENDS_BTN1:0 "OK"
+ OURSIDETRUCEENDS_BTN2:0 "OK"
+ OURSIDETRUCEENDS_BTN3:0 "Go to"
+ DominationDLC:0 "Domination"
+ KingOfKingsDLC:0 "King of Kings"
