--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -381,7 +381,7 @@
  NAVAL_DOCTRINE_COST:0 "この海軍ドクトリンを選択すると、海軍の水兵定員が$SAILORS|Y0$人であることから、$COST|Y2$¤の費用がかかります。"
  NAVAL_DOCTRINE_NOT_AVAILABLE:1 "§Rこの海軍ドクトリンはあなたには無効です：§!"
  NAVAL_DOCTRINE_CHANGE_TITLE:0 "海軍ドクトリンを変更"
- NAVAL_DOCTRINE_CHANGE_DESC:3 "海軍ドクトリンとして$DOCTRINE|Y$を採用しますか？\nこれは海軍の水兵定員が$SAILORS|Y0$人であることから、$COST|Y2$¤の費用がかかり、以下の永続的な効果が得られます："
+ NAVAL_DOCTRINE_CHANGE_DESC:4 "Are you sure you want to set your Naval Doctrine to $DOCTRINE|Y$?"
  NAVAL_DOCTRINE_CHANGE_REMOVAL:0 "現在のドクトリンである$DOCTRINE|Y$が削除され、その恩恵を失います。"
  NAVAL_DOCTRINE_CURRENT:0 "これは現在のあなたの海軍ドクトリンです。"
  NAVAL_DOCTRINE_CANNOT_AFFORD:1 "§R現在、海軍ドクトリンを変更する余裕はありません。§!"
@@ -403,7 +403,7 @@
  MACRO_BUILD_MANUFACTORY_TITLE:0 "製造工場の建設"
  MACRO_BUILDING_LIST_WINDOW_MANUFACTORIES_TITLE:0 "製造工場の建設"
  MACRO_BUILDING_GENERIC_MANUFACTORY_TITLE:0 "§Y製造工場§!\n"
- IDEA_WILL_INCREASE_INNOVATIVENESS:0 "\n\n今、このアイデアを選択することで§Y革新性§!が$VAL|G$増加します。"
+ IDEA_WILL_INCREASE_INNOVATIVENESS:1 "Picking this idea now will increase our §YInnovativeness§! with $VAL|G$."
  TECH_WILL_INCREASE_INNOVATIVENESS:0 "\n今、この技術を研究することで§Y革新性§!が$VAL|G$増加します。"
  INNOVATIVENESS_INCREASE:0 "（$VAL|+1$の§Y革新性§!を獲得）"
  INNOVATIVENESS_DECREASE_DESC:2 "他国が我々よりも技術的に先行しているため、現在$VAL|3R$/月変化します。\n"
@@ -507,7 +507,7 @@
  venetian_arsenal_naval_doctrine:0 "ヴェネツィア国立造船所"
  venetian_arsenal_naval_doctrine_desc:0 "一国の海軍力は、海上での火力だけでなく、その船を建造し維持する能力によっても測られる。我が国の兵器庫は、まさにこの目的のために作られている。"
  korean_panokseon:0 "板屋船"
- korean_panokseon_desc:0 "海に面した隣国が、我らの国と民を服属せしめようとしている。数隻の船の砲撃にも十分に耐える頑丈な軍艦「板谷船」は、脅威に対する回答となっている。"
+ korean_panokseon_desc:0 "海に面した隣国が、我らの国と民を服属せしめようとしている。数隻の船の砲撃にも十分に耐える頑丈な軍艦「板屋船」は、脅威に対する回答となっている。"
  japanese_atakebune:0 "安宅船"
  japanese_atakebune_desc:0 "海戦が始まってものの一時間で沈んでしまうような船に一体どんな価値があるのだ？我々の海軍の「安宅船」はこの問題を念頭に置き、そこらの沈む船ではなくもはや海上要塞となっている。"
  hanseatic_trade_fleet:0 "ハンザ・ドクトリン"
@@ -530,3 +530,10 @@
  polynesian_navigation_seas_desc:0 "大海原を航海する能力は、我らが民族にとって古くからあるものだ。他の者たちが道具に頼らなければならないのに対し、我が国の船乗りたちは目以外は何もいらず、海を横断するために、鳥や夜空を観察するのである。"
  naval_tactica:0 "タクティカ"
  naval_tactica_desc:0 "タクティカは、ローマ帝国の軍事と海戦での経験を集めた軍事マニュアルである。海上の戦術の多くは、中世を越えても海軍に通用する。"
+ ICON_ASKKNOWLEDGESHARE:0 "A request for §YKnowledge Sharing§!"
+ ASK_KNOWLEDGESHARENEWDESC:0 "Do you wish to proceed asking $COUNTRY|Y$ for Knowledge Sharing? Should they accept, we will pay them §G$PERCENT$%§! of our income ($INCOME|Y$ ¤) every month. Meanwhile, growth of their oldest established Institution not embraced by us (currently $INSTITUTION|Y$) will be accelerated by $GROWTH$ per month in our capital area."
+ NO_INSTITUTION_TO_SHARE_ASK:0 "There is no Institution we can learn from them about."
+ WE_HAVE_KNOWLEDGE_SHARING:0 "We are already involved in Knowledge Sharing with @$TAG$ $NAME$ until $EXPIRY$."
+ ASK_KNOWLEDGESHARETITLE:0 "Ask for Knowledge Sharing"
+ ASK_KNOWLEDGESHAREDESC:0 "Ask for them to Share Knowledge regarding their Institutions' technological advances."
+ ASK_KNOWLEDGESHARE_REVERSE:0 "The unenlightened mob of $COUNTRY|Y$ are asking us for the chance to catch up in technological progress via the means of Knowledge Sharing, giving them $GROWTH$ growth towards $INSTITUTION$ in their capital area provinces. Naturally, we will demand a monthly fee at §G$PERCENT$%§! of their income ($FEE$ ¤) if we accept."
